--- a/project/presentation.Rmd
+++ b/project/presentation.Rmd
@@ -2,31 +2,33 @@
 title: 'Data Analysis Project, Part 4: Presentation'
 subtitle: "BIOST 311: Regression Methods in the Health Sciences"
 author: "Kelsey Grinde and Brian Williamson"
-date: "Spring Quarter 2018; during final discussion section, 29 May 2018"
+date: "Spring Quarter 2018; Submit slides on Canvas by 29 May 2018"
 output: pdf_document
 ---
 
-## Instructions
+# Instructions
 
-Being able to present your work is an important skill. Here, you will give a group presentation of your data, scientific questions, statistical results, and scientific conclusions to the rest of the class. These presentations are limited to **15 minutes**.
+Being able to present your work is an important skill. Here, you will give a group presentation of your data, scientific questions, statistical results, and scientific conclusions to the rest of the class. 
 
-Each section in the template below will be shorter than its corresponding section in the report---remember, you have a finite amount of time for the presentation! 
+These presentations are limited to **10 minutes**. Each section in the template below will be shorter than its corresponding section in the report---remember, you have a finite amount of time for the presentation! The main idea is to give your fellow classmates (and instructors) an idea of what you've been working on all quarter.
 
-This assignment is graded. **Do not discuss with students outside of your group (within-group discussion is encouraged!) and do not use the Canvas discussion board for questions about this project**.
+Submit your presentation slides on Canvas by 10:00am on May 29. **Do not discuss your project with students outside of your group or post questions about your project on the Canvas discussion board.** But, feel free to ask us any questions in person/over email instead!
 
-## Template:
+This assignment is graded and is worth 20% of your total project grade.
 
-### Title
+# Template:
+
+## Title
 
 Make up a title for your proposed study!
 
-### Background and Introduction
+## Background and Introduction
 
-Provide a brief description of your data to give perspective into the importance of the problem and the situation under study. In particular, why were the data collected? This section is particularly useful when the document is circulated beyond your immediate study team.
+Provide a brief description of your data to give perspective into the importance of the problem and the situation under study. 
 
-### Scientific questions
+## Scientific Questions
 
-This section lays out the scientific agenda of your analysis. You should state both the overall scientific goal and the specific scientific objectives.
+In this section, you should lay out the scientific agenda of your analysis. In particular, you should state both the overall scientific goal and the specific scientific objectives.
 
 Example: a study of smoking and lung function in children
 
@@ -35,7 +37,7 @@ The overall scientific goal is to assess the association between smoking and lun
 1. Is smoking associated with decreased lung function in children?
 2. If there is an association between smoking and decreased lung function, is this effect different in older versus younger children.
 
-#### Statistical methods
+## Statistical Methods
 
 Describe all of the descriptive statistics you will compute, how you will compute them, and how you will display your results. Generally, these are used informally to evaluate and compare subgroups, identify errors in the data, and identify patterns of missing data.
 
@@ -45,16 +47,16 @@ Describe all of the inferential analyses you will run (e.g., linear regression),
 
 Also, describe any variables that you adjust for as potential confounders, effect modifiers, or precision variables for each analysis. 
 
-### Results
+## Results
 
-#### Description of the study cohort
+### Description of the study cohort
 
 Actually run the descriptive analyses that you propose above, and report the results in tables or figures, as appropriate. 
 
-#### Inferential analyses
+### Inferential analyses
 
 Report and interpret the effect estimates, confidence intervals, and p-values corresponding to each scientific question that you address. 
 
-### Discussion
+## Discussion
 
 Discuss what the statistical results you presented in the previous section mean in terms of the scientific questions that you posed at the beginning of the presentation.
