caught a typo, update discussion 2

--- a/lecture/intro.tex
+++ b/lecture/intro.tex
@@ -46,7 +46,7 @@ hyperref={colorlinks=true, linkcolor=blue, urlcolor=cyan}]{beamer}
 
 About this course:
 \begin{itemize}
-\item[] \textit{BIOST 311: Regression Methods for the Health Sciences} is about the use of regression methods to answer scientific questions, especially is relates to the health sciences.
+\item[] \textit{BIOST 311: Regression Methods for the Health Sciences} is about the use of regression methods to answer scientific questions, especially as related to the health sciences.
 \end{itemize}
 
 What is regression and why is it so important?
