--- a/discussion/2.graphs/graphs.tex
+++ b/discussion/2.graphs/graphs.tex
@@ -261,22 +261,22 @@ Captions should be \textcolor{blue}{self-contained}, so that the reader does not
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% THIS BIT MAY BE REMOVED
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Pie charts: the good}
-
-\end{frame}
-
-
-\begin{frame}
-\frametitle{Pie charts: the bad}
-
-\end{frame}
-
-
-\begin{frame}
-\frametitle{Pie charts: the ugly}
-
-\end{frame}
+%\begin{frame}
+%\frametitle{Pie charts: the good}
+%
+%\end{frame}
+%
+%
+%\begin{frame}
+%\frametitle{Pie charts: the bad}
+%
+%\end{frame}
+%
+%
+%\begin{frame}
+%\frametitle{Pie charts: the ugly}
+%
+%\end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% THIS BIT IS IMPORTANT AGAIN
@@ -284,31 +284,60 @@ Captions should be \textcolor{blue}{self-contained}, so that the reader does not
 
 \begin{frame}
 \frametitle{Graphical integrity: summary}
+Remember that graphics should \textcolor{blue}{support your statistical analyses}.
 
+Components of good graphics:
+\begin{itemize}
+\item Figures should be \textcolor{blue}{proportional} to the numerical quantities represented
+\item[]
+\item Include \textcolor{blue}{reference points}, \textcolor{blue}{spacing} and \textcolor{blue}{labeling} for axes
+\item[]
+\item \textcolor{red}{Do not quote the data out of context}
+\item[]
+\item Focus on the \textcolor{blue}{data}, \textcolor{red}{not the design}
+\item[]
+\item \textcolor{blue}{Clear}, \textcolor{blue}{detailed}, and \textcolor{blue}{thorough} labeling
+\end{itemize}
 \end{frame}
 
 
 \begin{frame}
 \frametitle{Graphical integrity: summary}
 
+\hspace*{-1cm}\includegraphics[width=1.15\textwidth]{{figs/good_2}.png}
 \end{frame}
 
 
 \begin{frame}
-\frametitle{Guidelines for tables}
-
+\frametitle{Guidelines for tables (Ehrenberg, 1977)}
+\begin{itemize}
+\item Give \textcolor{blue}{marginal averages} to provide a visual focus
+\item[]
+\item Order rows/columns by marginal averages or other \textcolor{green}{measure of size}
+\item[]
+\item Put groups to be compared in rows (so that scanning down columns yields comparisons)
+\item[]
+\item Round to 2 effective digits
+\item[]
+\item Use layout to facilitate comparisons
+\item[]
+\item Give \textcolor{blue}{brief verbal summaries} to lead reader to patterns and exceptions
+\item[]
+\item Clearly label rows/columns, give units, title
+\end{itemize}
 \end{frame}
 
 
 \begin{frame}
 \frametitle{Tables: example 1}
-
+\includegraphics[width=1\textwidth]{{figs/tables_1}.png}
 \end{frame}
 
 
 \begin{frame}
 \frametitle{Tables: example 2}
-
+\centering
+\includegraphics[width=1\textwidth]{{figs/tables_2}.png}
 \end{frame}
 
 
