--- a/lecture/intro.tex
+++ b/lecture/intro.tex
@@ -52,7 +52,7 @@ About this course:
 What is regression and why is it so important?
 \begin{itemize}
 \item ``A set of statistical processes for estimating the relationships among variables." -- Wikipedia
-\item ``Everything is regression!" -- Scott Emerson, PhD, MD
+\item ``Everything is regression!" -- Scott Emerson, MD, PhD
 \item \textit{Very} widely used in the health sciences (and other fields!)
 \end{itemize}
 
@@ -99,7 +99,7 @@ Course Structure:
 \begin{itemize}
 \item 3 lectures and 1 discussion section per week
 	\begin{itemize}
-	\item Lecture: MWF, 12:30--1:30pm, SOCC 301
+	\item Lecture: MWF, 12:30--1:20pm, SOCC 301
 	\item Discussion: Tu, 10:30--11:20am, SOCC 301 (or HSL)
 	\end{itemize}
 \item Office hours: W, 2:00--4:00pm, HSB H657 (or by appt)
@@ -392,7 +392,7 @@ Later in the course, we'll learn about other types of regression that are often 
 
 \begin{itemize}
 \item Download \texttt{R} and \texttt{R Studio} (see instructions on Canvas)
-\item Meet in HSL computer lab tomorrow morning
+\item Meet in Health Sciences Library computer lab tomorrow morning (Classroom C); bring your laptop
 \item Start working on:
 	\begin{itemize}
 	\item Familiarizing yourself with Canvas page and Syllabus
